fix: EventDetails -> image brightness contrast with white text

--- a/Event_Tracker_App/Event.Tracker.Web/src/pages/EventDetails.css
+++ b/Event_Tracker_App/Event.Tracker.Web/src/pages/EventDetails.css
@@ -35,7 +35,7 @@
             width: 100%;
             height: 100%;
             z-index: -1;
-
+            filter: brightness(80%);
             object-fit: cover;
         }
         .event-container__header-item svg{
@@ -87,12 +87,6 @@
 
         color: #e7e7e7;
     }   
-        .event-container__main-title{
-
-        }
-        .event-container__main-secondarytitle{
-            
-        }
         .event-container__main-paragraph{
             line-height: 150%;
         }
